--- a/build.yml
+++ b/build.yml
@@ -2,11 +2,14 @@ out: ~/Downloads
 
 platforms:
   - name: windows
-    arch:
-      - 386
-      - amd64
+    arch: 386
+    zip:  win32
+  - name: windows
+    arch: amd64
+    zip:  win64
   - name: darwin
     arch: amd64
+    zip:  mac
   - name: linux
     arch:
       - 386
